2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-field.c
	* tests/libtracker-common/tracker-field-test.c
	* tests/libtracker-common/Makefile.am: Fixed detail in enum
	definition and added testing for enum->string function.
	
2008-08-27  Philip Van Hoof  <philip@codeminded.be>

	* src/trackerd/tracker-daemon.c: Fixed a memory problem allocating 0
	bytes, found using valgrind

2008-08-26  Jamie McCracken <jamiemcc at gnome org>


	* src/libtracker-common/tracker-parser.c
	* src/libtracker-common/tracker-parser.h
	Made new API for tracker-parser more compatible
	with sqlite FTS3.
	
	* tracker-fts
	* tracker-fts/tracker-fts.c
	* tracker-fts/tracker-fts-hash.c
	* tracker-fts/Makefile.am
	* tracker-fts/tracker-fts.h
	* tracker-fts/tracker-fts-hash.h
	Created forked version of sqlite fts3 module called tracker-fts
	Integrated our parser and tweaked it to work fully with FTS3 api
	
	* tests/Makefile.am
	* configure.ac
	* src/Makefile.am
	* tests/tracker-fts
	* tests/tracker-fts/tracker-fts-test.c
	* tests/tracker-fts/Makefile.am
	Added test files for tracker-fts module

2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c (get_file_content):
	Don't allocate in the stack so much memory, even more when it's going
	to be copied around.

2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* src/Makefile.am:
	* src/libinotify/Makefile.am:
	* tests/common/Makefile.am:
	* tests/common/tracker-test-helpers.c:
	* tests/libtracker-common/Makefile.am:
	* tests/libtracker-db/Makefile.am: Fix distcheck, to some extent.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/tracker-indexer/tracker-main.c: raised the "wait for more"
	timeout to 5 minutes. The indexer is harmless for the system's
	resources while waiting. VS. stopping and starting the indexer often
	isn't harmless for the system's resources.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>
