@@ -1,10 +1,17 @@
+2008-08-27  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/tracker-metadata-utils.c (tracker_metadata_read)
+	(tracker_metadata_query_file): Handle again metadata_context being
+	possibly invalidated during reading.
+	(call_text_filter): Fix compiler warning.
+
 2008-08-27  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/libtracker-common/tracker-field.c
 	* tests/libtracker-common/tracker-field-test.c
 	* tests/libtracker-common/Makefile.am: Fixed detail in enum
 	definition and added testing for enum->string function.
-	
+
 2008-08-27  Philip Van Hoof  <philip@codeminded.be>
 
 	* src/trackerd/tracker-daemon.c: Fixed a memory problem allocating 0
